# rtfm

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/sample_docs/: README.md
scripts/: benchmark.py  create_indexes.py  dev.sh  ui.py
src/: config.py  main.py
src/api/: deps.py
src/api/endpoints/: admin.py  chat.py  ingest.py  metrics.py
src/models/: memory.py  schemas.py
src/services/: cache.py  ingestion.py  memory.py  ollama_client.py  rag.py  redis_manager.py
src/utils/: chunking.py  metrics.py  prompts.py
tests/: conftest.py  test_cache.py  test_ingestion.py  test_memory.py  test_rag.py
